# Sparse-Prior-Method

./: .flake8  .gitignore  DFT.py  LASSO.py  README.md  app.py  experiments.py  jsconfig.json  notebook.ipynb  plotting.py  pyproject.toml  radiation_pattern.py  requirements.txt
cs_model/: DFT.py  app.py  plotting.py  solvers.py
notebooks/: TEMP_TOBIAS_F-S-N-SUPP-ARC_support_recovery_sensor_noise_arc_baseline.ipynb  experiments.ipynb  how_to_run_the_methods.ipynb  test_frequency_domain_flat_spectra.ipynb  test_metrics.ipynb  test_pinv_noise.ipynb
notebooks/benchmarks/: F-MG-N-SUPP_support_recovery_multifrequency_grouped_sensor_noise_baseline.ipynb  (+2 more)
notebooks/legacy/: README.md  (+6 more)
old_spaghetti/: Broadband.ipynb  Detect_correct_source.ipynb  LASSO_comparison.ipynb  Moe_group_lasso.ipynb  compare_vec_sp.ipynb  easy_prior_optimization.py  heatmap_block_performance.py  optimize_lasso.py  ring_of_elements.ipynb  simulated_prior_optimization.py  troubleshoot_lasso.py
spaghetti_code/: 11_whitenoise_simulation_demo.ipynb  12_performance_benchmark.ipynb  32_compare_csr_sp.ipynb  Block_group.ipynb  Detect_correct_source.ipynb  LASSO_comparison.ipynb  Moe_group_lasso.ipynb  compare_sparsity_LASSO.py  compare_vec_sp.ipynb  correct_sparsity.py  count_sparsity.py  group_lasso.ipynb  heatmap_block_performance.py  medium_prior_optimization.py  ring_of_elements.ipynb  simulated_prior_optimization.py  speed.ipynb  test_metrics.ipynb  troubleshoot_lasso.py  vectorized_sparse_prior.py
src/: DFT.py  corner_echo.py  main.py  plotting.py  solvers.py
unused/: experiments.py  main.py
(+91 files in other folders)
