[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compressed_sensing_with_priors"
version = "0.1.0"
dependencies = [
  "numpy",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = "src/cs_priors"
